# goit-pythonweb-hw-02

./: .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
conf/: db.py
