[project]
name = "hw-2"
version = "0.1.0"
description = "home work 2"
authors = [
    {name = "ViktorBond7",email = "141341341+ViktorBond7@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi >=0.135.3,<0.136.0",
    "sqlalchemy >=2.0.49,<3.0.0",
    "psycopg2-binary >=2.9.11,<3.0.0",
    "uvicorn >=0.43.0,<0.44.0",
    "pymongo >=4.16.0,<5.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
